Samis_Drone_control/log/build_2023-12-11_08-36-30/samis_drone_crl/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/peteraerocedi/Samis_Drone/install/samis_drone_crl/lib/python3.10/site-packages/samis_drone_crl/initiate_drone.py", line 4
    from DJITelloPy/djitellopy import Tello
                   ^
SyntaxError: invalid syntax

